# deep-research

./: blog-post.md  main.py  models.py  prompts.py  pyproject.toml  tools.py
open-deep-research/: main.py  pyproject.toml
ui/: package-lock.json  package.json  pnpm-lock.yaml
ui/app/: globals.css  page.tsx
ui/components/ai-elements/: response.tsx
