[project]
name = "deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-otel>=0.10.0",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.116.1",
    "openai>=1.100.2",
    "openinference-instrumentation-openai>=0.1.31",
    "pydantic-ai>=0.7.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.uv.workspace]
members = [
    "open-deep-research",
]
