[project]
name = "open-deep-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-otel>=0.10.0",
    "mirascope[openai,tenacity]>=1.25.6",
    "openai>=1.100.2",
    "openinference-instrumentation-openai>=0.1.31",
]
